--- a/index.html
+++ b/index.html
@@ -4,60 +4,73 @@
     <meta charset="utf-8">
     <title>Secret Agent Supply, Inc.</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet" />
-    <link href="./resources/css/reset.css" type="text/css" rel="stylesheet" />
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <div class="header">
-      <header>
-        <img src="./resources/images/logo.png" alt="logo" />
-      </header>
-    </div>
-    <div class="section">
-      <div class="headline">
-        <h3>NEW ARRIVAL</h3>
-        <h1>SPORT BIKES AND MOTORCYCLES</h1>
-      </div>
-      <div class="navigation">
-        <nav>
-          <p>Eyewear</p>
-          <p>Apparel</p>
-          <p>Gadgets</p>
-          <p>Vehicles</p>
-          <p>Classes</p>
-          <p>Contact</p>
-        </nav>
-      </div>
-      <div class="main-content">
-        <div class="products">
-          <div class="image-text">
-            <img src="./resources/images/pen.png" alt="pen" />
-            <p>Exploding Pen</p>
-          </div>
-          <div class="image-text">
-            <img src="./resources/images/watch.png" alt="watch" />
-            <p>Cellular Watch</p>
-          </div>
-          <div class="image-text">
-            <img src="./resources/images/glasses.png" alt="glasses" />
-            <p>Thermal Glasses</p>
+    <div class="full-width">
+      <div class="container">
+      <!-- This is the header -->
+        <div class="header">
+          <header>
+            <img id="logo" src="./resources/images/logo.png" alt="logo" />
+            <span>SECRET AGENT SUPPLY INC.</span>
+          </header>
+        </div>
+        <div class="section">
+        <!-- This is the headline section -->
+        <div class="background-image">
+          <div class="headline">
+            <p>NEW ARRIVAL</p>
+            <h1>SPORT BIKES AND MOTORCYCLES</h1>
           </div>
         </div>
-        <div class="info">
-          <div class="location">
-            <p>Location</p>
-            <p>-47.346436, 84.32354</p>
+        <!-- This is the navigation section -->
+        <div class="navigation">
+          <nav>
+            <p>Eyewear</p>
+            <p>Apparel</p>
+            <p>Gadgets</p>
+            <p>Vehicles</p>
+            <p>Classes</p>
+            <p>Contact</p>
+          </nav>
+        </div>
+        <!-- This is the main content and images section -->
+        <div class="main-content">
+          <div class="products">
+            <div class="image-text">
+              <img src="./resources/images/pen.png" alt="pen" />
+              <p>Exploding Pen</p>
+            </div>
+            <div class="image-text">
+              <img src="./resources/images/watch.png" alt="watch" />
+              <p>Cellular Watch</p>
+            </div>
+            <div class="image-text">
+              <img src="./resources/images/glasses.png" alt="glasses" />
+              <p>Thermal Glasses</p>
+            </div>
           </div>
-          <div class="hours">
-            <p>Hours</p>
-            <p>0800 - 1800</p>
+          <!-- This is the contact information section -->
+          <div class="info">
+            <div class="location">
+              <p class="has-background">Location</p>
+              <p>-47.346436, 84.32354</p>
+            </div>
+            <div class="hours">
+              <p class="has-background">Hours</p>
+              <p>0800 - 1800</p>
+            </div>
           </div>
         </div>
       </div>
+      <!-- This is the footer with copyright notice -->
+      <div class="footer">
+        <footer>
+          <p>Copyright Secret Agent Supply Inc.</p>
+        </footer>
+      </div>
     </div>
-    <div class="footer">
-      <footer>
-        <p>Copyright Secret Agent Supply Inc.</p>
-      </footer>
-    </div>
+  </div>
   </body>
 </html>
