--- a/index.html
+++ b/index.html
@@ -7,52 +7,52 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <div class="full-width">
-      <div class="container">
       <!-- This is the header -->
-        <div class="header">
-          <header>
-            <img id="logo" src="./resources/images/logo.png" alt="logo" />
-            <span>SECRET AGENT SUPPLY INC.</span>
-          </header>
-        </div>
-        <div class="section">
+    <header class="header full-width">
+      <div class="header-content content-width">
+        <img id="logo" src="./resources/images/logo.png" alt="logo" />
+        <span id="headline">SECRET AGENT SUPPLY INC.</span>
+      </div>
+    </header>
+      <div class="section">
         <!-- This is the headline section -->
-        <div class="background-image">
-          <div class="headline">
-            <p>NEW ARRIVAL</p>
-            <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        <div class="background-image full-width">
+          <div class="content-width">
+            <div class="headline">
+              <p id="new-arrival">NEW ARRIVAL</p>
+              <h1>SPORT BIKES AND MOTORCYCLES</h1>
+            </div>
           </div>
         </div>
         <!-- This is the navigation section -->
-        <div class="navigation">
-          <nav>
-            <p>Eyewear</p>
-            <p>Apparel</p>
-            <p>Gadgets</p>
-            <p>Vehicles</p>
-            <p>Classes</p>
-            <p>Contact</p>
+        <div class="navigation full-width">
+          <nav class="content-width">
+            <span>Eyewear</span>
+            <span>Apparel</span>
+            <span>Gadgets</span>
+            <span>Vehicles</span>
+            <span>Classes</span>
+            <span>Contact</span>
           </nav>
         </div>
         <!-- This is the main content and images section -->
         <div class="main-content">
-          <div class="products">
+          <div class="products content-width">
             <div class="image-text">
-              <img src="./resources/images/pen.png" alt="pen" />
-              <p>Exploding Pen</p>
+              <img class="image" src="./resources/images/pen.png" alt="pen" />
+              <p class="below-image">Exploding Pen</p>
             </div>
             <div class="image-text">
-              <img src="./resources/images/watch.png" alt="watch" />
-              <p>Cellular Watch</p>
+              <img class="image" src="./resources/images/watch.png" alt="watch" />
+              <p class="below-image">Cellular Watch</p>
             </div>
             <div class="image-text">
-              <img src="./resources/images/glasses.png" alt="glasses" />
-              <p>Thermal Glasses</p>
+              <img class="image" src="./resources/images/glasses.png" alt="glasses" />
+              <p class="below-image">Thermal Glasses</p>
             </div>
           </div>
           <!-- This is the contact information section -->
-          <div class="info">
+          <div class="info content-width">
             <div class="location">
               <p class="has-background">Location</p>
               <p>-47.346436, 84.32354</p>
@@ -65,12 +65,10 @@
         </div>
       </div>
       <!-- This is the footer with copyright notice -->
-      <div class="footer">
-        <footer>
+      <footer class="footer full-width">
+        <div class="content-width">
           <p>Copyright Secret Agent Supply Inc.</p>
-        </footer>
-      </div>
-    </div>
-  </div>
+        </div>
+      </footer>
   </body>
 </html>
