add responsive design

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
         <!-- This is the navigation section -->
         <div class="navigation full-width">
           <nav class="content-width">
-            <span>Eyewear</span>
-            <span>Apparel</span>
-            <span>Gadgets</span>
-            <span>Vehicles</span>
-            <span>Classes</span>
-            <span>Contact</span>
+            <span class="small-screen">Menu</span>
+            <span class="desktop">Eyewear</span>
+            <span class="desktop">Apparel</span>
+            <span class="desktop">Gadgets</span>
+            <span class="desktop">Vehicles</span>
+            <span class="desktop">Classes</span>
+            <span class="desktop">Contact</span>
           </nav>
         </div>
         <!-- This is the main content and images section -->
@@ -42,11 +43,11 @@
               <img class="image" src="./resources/images/pen.png" alt="pen" />
               <p class="below-image">Exploding Pen</p>
             </div>
-            <div class="image-text">
+            <div class="image-text" id="watch">
               <img class="image" src="./resources/images/watch.png" alt="watch" />
               <p class="below-image">Cellular Watch</p>
             </div>
-            <div class="image-text">
+            <div class="image-text" id="glasses">
               <img class="image" src="./resources/images/glasses.png" alt="glasses" />
               <p class="below-image">Thermal Glasses</p>
             </div>
