--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <!-- This is the navigation section -->
         <div class="navigation full-width">
           <nav class="content-width">
-            <span class="small-screen">Menu</span>
-            <span class="desktop">Eyewear</span>
-            <span class="desktop">Apparel</span>
-            <span class="desktop">Gadgets</span>
-            <span class="desktop">Vehicles</span>
-            <span class="desktop">Classes</span>
-            <span class="desktop">Contact</span>
+            <a href="#" class="small-screen">Menu</a>
+            <a href="#" class="desktop">Eyewear</a>
+            <a href="#" class="desktop">Apparel</a>
+            <a href="#" class="desktop">Gadgets</a>
+            <a href="#" class="desktop">Vehicles</a>
+            <a href="#" class="desktop">Classes</a>
+            <a href="#" class="desktop">Contact</a>
           </nav>
         </div>
         <!-- This is the main content and images section -->
